--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Imfan笔记</title>
-  <meta name="keywords" content="">
+  <meta name="keywords" content="IT,后端,技术分享,思考">
   <meta name="description" content="Imfan笔记">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="description" content="技术文档中心使用说明wiki文档中心技术架构12345678graph TB wiki[文档中心服务&lt;br&gt;^10s自动更新^]--&gt;|浏览器和docsify&lt;br&gt;将md文档渲染出目录和正文|user[浏览者]jenkins--&gt;|部署wiki|wikiwiki--&gt;|资源通过wiki的后台node服务,&lt;br&gt;使用scp上传到59机器|me">
